ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciftp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/(.*)"
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      
      - path: "/api/(.*)"
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 8765
